fix image crop 800x600, image too large

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,3 +7,55 @@ body {
     margin: 0;
     font-family: 'Noto Sans Jp', sans-serif;
 }
+
+.container { 
+    display: flex;
+    flex-direction: column;
+    margin: 20px 50px;
+}
+
+.price-box {
+    width: 35%;
+    height: 250px;
+    border: 1px solid rgb(221, 211, 221);
+    border-radius: 12px;
+    box-shadow: rgb(0 0 0 / 12%) 0 6px 16px;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.button {
+    width: 90%;
+    padding: 15px;
+    border-radius: 10px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    background: linear-gradient(135deg, rgb(255, 56, 92) 20%, rgb(189, 30, 89));
+}
+
+.main-image {
+    width: 60%;
+}
+
+.image {
+    width: 50%;
+}
+  
+.image img {
+    width: 100%;
+    max-height: 270px;
+}
+  
+.sub-images-section {
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+  
+  
+
+  
+  
